# weather_app

./: LICENSE  Makefile  README.md  docker-compose.yaml
.github/workflows/: git_hub_ci-cd.yaml
backend/: Dockerfile  Makefile  pyproject.toml
backend/app/: app_factory.py  hello.py  main.py  settings.py  weather_logic.py
frontend/: Dockerfile  Makefile  main.html  pyproject.toml  settings.py  weather_page.html
frontend/app/backend_api/: api.py
frontend/app/templates/: main.html
nginx/: nginx.conf
